
	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.0 ***

	* bin/cygport.in (fetch): Remove tarball placeholder if download fails.

	* test/Makefile.am (clean-local):
	Remove bootstrap workdir, in case make check was interrupted.

	* bin/cygport.in (keepdir): New function to keep empty directories.
	(__prep_empty_dirs, src_postinst): Remove empty directories under $D.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am
	* lib/berkdb.cygclass:
	New cygclass for building the Berkeley DB versions 3.x and 4.x.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am
	* lib/java.cygclass:
	New cygclass for GNU Classpath based Java packages.

	* bin/dosym: Properly handle multiple targets and relative targets.

	* lib/python.cygclass (dopython): Install DLLs executable.

	* bin/cygport.in (__mkdirs, src_prep):
	New config/ directory for storing configuration information during build.
	Create cygport-version file for future use.

	* bin/cygport.in (__mkdirs, finish): Use user-only managed mounts.

	* bin/cygport.in (cygtest): Smarter detection of make check and make test.

	* lib/python.cygclass (pythoninto, dopython): New convenience functions.
	(python_compile): Created alias to python_optimize.
	(python_optimize):
	Defaults to compiling in PYTHON_SITELIB if no arguments passed.

	* bin/cygport.in (pkg_diff): Restructure to be more precise.

	* lib/distutils.cygclass (distutils_install):
	Only python_optimize PYTHON_SITELIB if existant. 

	* lib/gst-plugins0.10.cygclass: Added new plugins in bad-10.4.
	Force xshm support for ximage.
	Enable cdparanoia support (requires patch to use libcdio_paranoia).

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump for post-0.2 HEAD.

*** 0.2.11 ***

	* Branch STABLE_0_2.

	* bin/cygport.in (apply_patch): Pass --binary to patch for d2u issues.

	* lib/perl.cygclass (check_perl_module): Cleaner syntax.

	* lib/kde3.cygclass: Don't run kde3_autoreconf for i18n/l10n packages.

	* CYGWIN-PATCHES/README: