@@ -1,4 +1,6 @@
 
+	* bin/prep_scrollkeeper_omf.sh: Improve postinstall and add preremove.
+
 	* CYGWIN-PATCHES/README:
 	* configure.ac:
 	Post-release version bump.
